--- a/src/app/affectation/affectation.component.html
+++ b/src/app/affectation/affectation.component.html
@@ -10,7 +10,22 @@
                                     <div class="col-md-4">
                                    <h4 class="card-title p-3">Liste des affectations</h4> 
                                     </div>
-                                   
+                                    <div class="col-md-5 p-3">
+                                      <!-- search bar -->
+                                        <form class="form-inline my-2 my-lg-0 search" >
+                                          
+                                          <input  type="search" (ngModelChange)="searchAffectations(key.value)" 
+                                          #key="ngModel" ngModel
+                                          name="key" id="searchName" class="form-control col-md-12 "  
+                                          placeholder="Search..." autofocus required>
+                                       
+                                       </form> 
+                                       </div>
+                                    <div class="col-md-3 float-right p-3">
+                                      <button (click)="onOpenModal('add')" mat-raised-button class=" btnadd pull-right">
+                                          <i class="fa fa-plus"></i> Ajouter affectation
+                                          </button>
+                                  </div>  
                             </div>
                             </div>
                        <div class="card-body">
@@ -86,7 +101,7 @@
                    </div>
                </div>          
            </div>
-           </div>
+</div>
      
 <!-- view affectation modal -->
 <div class="modal fade col-md-12" id="viewAffectationModal" tabindex="-1" role="dialog" aria-labelledby="affectationViewModalLabel" aria-hidden="true">
@@ -239,7 +254,7 @@
 
 <!--Edit affectation modal-->
 <div class="modal fade col-md-12" id="updateAffectationModal" tabindex="-1" role="dialog" aria-labelledby="affectationEditModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg " role="document">
+  <div class="modal-dialog modal-dialog-centered  " role="document">
      <div class="modal-content">
         <div class="modal-header">
            <h5 class="modal-title" id="updateVehiculeModalLabel">Modifier affectation </h5> 
@@ -248,20 +263,22 @@
            <form #editForm="ngForm">
             <input type="hidden" ngModel="{{editAffectation?.affectationId}}" name="affectationId" class="form-control" id="affectationId" >
            
-           
+            <div class="col-md-12">
             <mat-form-field class="example-full-width">
-              
               <mat-label>Unité mobile actuelle: {{currentAffectationVehicule}}</mat-label>
               <!-- added vehiculeId : number property to affectation component so that i can send it in form -->
               <mat-select  placeholder="select mobile unit" ngModel="{{editAffectation?.vehicule?.vehiculeId}}" name="vehiculeId" id="vehiculeId" >
                     <ng-container *ngFor="let vehicule of vehiculeDropDownList">
                       <mat-option [value]="vehicule.vehiculeId">{{vehicule.vehicule}}</mat-option>
                     </ng-container>
-             
+               
                   </mat-select>  
               </mat-form-field>
+            </div>
+           
+              <div class="col-md-12">
               <mat-form-field>
-                
+              
                 <mat-label>Conducteur actuel: {{currentAffectationConducteur}} </mat-label>
                 <mat-select  placeholder="select conducteur" ngModel="{{editAffectation?.conducteur?.userId}}" name="conducteurId" id="conducteurId">
                       <ng-container *ngFor="let conducteur of conducteurDropDownList">
@@ -269,23 +286,94 @@
                       </ng-container>
                 </mat-select>  
                 </mat-form-field>
+              </div>
 
+              <div class="row col-md-12">
+                <div class="col-md-6">
                 <mat-label>Date debut</mat-label>
                 <mat-form-field>
                   <input matInput type="datetime-local" ngModel="{{editAffectation?.dateDebut}} " name="dateDebut" id="dateDebut">
                 </mat-form-field>
-
+                </div>
+               <div class="col-md-6">
                 <mat-label>Date Fin</mat-label>
                 <mat-form-field>
                   <input matInput type="datetime-local" ngModel="{{editAffectation?.dateFin}} " name="dateFin" id="dateFin">
                 </mat-form-field>
-                <div class="modal-footer">
-                  <button type="button" id="" data-dismiss="modal" class="btn btn-warning pull-right ">Annuler</button>
-                  <button  (click)="getAffectationFromEdit(editForm.value)" type="submit" data-dismiss="modal" class="btn btn-success pull-right " >Sauvegarder</button>
+                </div>
+              </div>
+             
+
+                <div class="modal-footer justify-content-between  ">
+                  <button type="button" id="" data-dismiss="modal" class="btn btn-warning ml-auto">Annuler</button>
+                  <div class="space">
+                  </div>
+                  <button  (click)="getAffectationFromEdit(editForm.value)" type="submit" data-dismiss="modal" class="btn btn-success mr-auto" >Sauvegarder</button>
                </div>
                <div class="clearfix"></div>
            </form>
         </div>
      </div>
+  </div>
+</div>
+<!--Add affectation modal-->
+<div class="modal fade col-md-12"  id="addAffectationModal" tabindex="-1" role="dialog" aria-labelledby="addAffectationModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered"  role="document">
+      <div class="modal-content">
+      <div class="modal-header">
+          <h5 class="modal-title">Ajouter affectation</h5>
+      </div>       
+      <div class="modal-body">
+          <form #addForm="ngForm" (ngSubmit)="getVehiculeAndConducteurFromAddForm(addForm)">
+            <div class="col-md-12">
+              <mat-form-field class="example-full-width">
+                <mat-label>Unité mobile</mat-label>
+          
+                <mat-select  placeholder="select mobile unit" ngModel matInput name="vehiculeId" id="vehiculeId" required>
+                      <ng-container *ngFor="let vehicule of vehiculeDropDownList">
+                        <mat-option [value]="vehicule.vehiculeId">{{vehicule.vehicule}}</mat-option>
+                      </ng-container>
+                 
+                    </mat-select>  
+                </mat-form-field>
+              </div>
+             
+                <div class="col-md-12">
+                <mat-form-field>
+                
+                  <mat-label>Conducteur</mat-label>
+                  <mat-select  placeholder="select conducteur" ngModel matInput name="conducteurId" id="conducteurId" required>
+                        <ng-container *ngFor="let conducteur of conducteurDropDownList">
+                          <mat-option [value]="conducteur.conducteurId">{{conducteur.conducteur}}</mat-option>
+                        </ng-container>
+                  </mat-select>  
+                  </mat-form-field>
+                </div>
+  
+                <div class="row col-md-12">
+                  <div class="col-md-6">
+                  <mat-label>Date debut</mat-label>
+                  <mat-form-field>
+                    <input matInput type="datetime-local" ngModel matInput required name="dateDebut" id="dateDebut">
+                  </mat-form-field>
+                  </div>
+                 <div class="col-md-6">
+                  <mat-label>Date Fin</mat-label>
+                  <mat-form-field>
+                    <input matInput type="datetime-local" ngModel matInput required  name="dateFin" id="dateFin">
+                  </mat-form-field>
+                  </div>
+                </div>
+              <div class="modal-footer justify-content-between">
+                  <a data-dismiss="modal" type="button" id="add-affectation-form" class="btn btn-warning ml-auto" >Annuler</a>
+                  <div class="space">
+                  </div>
+                  <button [disabled]="addForm.invalid" type="submit" class="btn btn-success mr-auto">Sauvegarder</button>
+               </div>
+              <div class="clearfix"></div>
+          </form>
+      </div>
+
+  </div>
   </div>
 </div>
