--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             <span class="navbar-toggler-icon icon-bar"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <form class="navbar-form">
+            <!-- <form class="navbar-form">
                 <div class="input-group no-border">
                     <input type="text" value="" ngModel
                     name="key" class="form-control" id="search" placeholder="Search...">
@@ -19,7 +19,7 @@
                         <div class="ripple-container"></div>
                     </button>
                 </div>
-            </form>
+            </form> -->
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0)">
