--- a/src/app/conducteur/conducteur.component.html
+++ b/src/app/conducteur/conducteur.component.html
@@ -121,7 +121,7 @@
                 <h5 class="modal-title">Ajouter conducteur</h5>
             </div>       
             <div class="modal-body">
-                <form #addForm="ngForm" (ngSubmit)="onUpload(); onAddConducteur(addForm);">
+                <form #addForm="ngForm" (ngSubmit)="onUpload(addForm);">
                     <div class="row block">
                         <div class="col-md-3">
                            
@@ -274,13 +274,17 @@
                                     <input matInput type="text" ngModel="{{editConducteur?.categoriePermis}}" name="categoriePermis" class="form-control" id="categoriePermis"  >
                                 </mat-form-field>
                                 </div>
-                               
+                                <div class="container row">
+                                    <div class="col-md-6">
+                                        <input type="file" ngModel="{{editConducteur?.image?.id}}" name="image" (change)="onFileChanged($event)">
+                                    </div>
+                                </div>
 
                                
                         
                                 <div class="modal-footer col-md-12">
                                 <button type="button" id="" data-dismiss="modal" class="btn btn-warning pull-right col-md-2">Annuler</button>
-                                <button  (click)="onUpdateConducteur(editForm.value)"data-dismiss="modal" class="btn btn-success pull-right col-md-2" >Sauvegarder</button>
+                                <button  (click)="onEdit(editForm.value)"data-dismiss="modal" class="btn btn-success pull-right col-md-2" >Sauvegarder</button>
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
