--- a/src/app/conducteur/conducteur.component.html
+++ b/src/app/conducteur/conducteur.component.html
@@ -171,20 +171,7 @@
                                 <input type="file" ngModel="{{editConducteur?.image?.id}}" name="image" (change)="onFileChanged($event)">
                                 <img [src]=url>
                             </div>
-                            <!--<div *ngIf=url >
-                                <img [src]=url>
-                            </div>-->
-                         <!--   <div class="col-md-6">
-                                <input type="button" (click)="onUpload(); getImage()" value="upload">
-                
-                            </div>-->
-                          <!--  {
-                                id:;
-                                type:;
-                                picByte:;
 
-                            }
-                        -->
                         </div>
                         <hr />
                         <div class="container row">
@@ -192,23 +179,6 @@
                                 <div *ngIf=message>{{message}}</div>
                             </div>
                         </div>
-                        <!--<div class="container row">
-                            <div class="col-md-6">
-                                <input type="text" class="form-control" id="name" placeholder="image name" [(ngModel)]="imageName"
-                                    name="name" />
-                            </div>
-                            <div class="col-md-6">
-                                <input type="button" (click)="getImage()" value="Get Image">
-                            </div>
-                        </div>
-                        <div class="container row">
-                            <div class="col-md-12">
-                                <div *ngIf=url >
-                                    <img [src]=url>
-                                </div>
-                            </div>
-                        </div>-->
-                    
                     </div>
                     
                    
@@ -275,7 +245,7 @@
                                 </div>
                                 <div class="container row">
                                     <div class="col-md-6">
-                                        <input type="file" ngModel="{{editConducteur?.image?.id}}" name="image" (change)="onFileChanged($event)">
+                                        <input #myInput type="file" ngModel="{{editConducteur?.image?.id}}" name="image" (change)="onFileChanged($event)">
                                         <img [src]=url>
                                     </div>
                                 </div>
@@ -357,22 +327,6 @@
                     <input type="button" (click)="getImage1()" value="Voir image">
                     <img [src]=url1>
                 </div>
-                  <!--<div class="container row">
-                            <div class="col-md-6">
-                                <input type="text" class="form-control" id="name" placeholder="image name" [(ngModel)]="imageName"
-                                    name="name" />
-                            </div>
-                            <div class="col-md-6">
-                                <input type="button" (click)="getImage()" value="Get Image">
-                            </div>
-                        </div>
-                        <div class="container row">
-                            <div class="col-md-12">
-                                <div *ngIf=url >
-                                    <img [src]=url>
-                                </div>
-                            </div>
-                        </div>-->
                </div>
            
                 <div class="modal-footer col-md-12">
