--- a/src/app/conducteur/conducteur.component.scss
+++ b/src/app/conducteur/conducteur.component.scss
@@ -144,3 +144,132 @@ hr:after {
   #image{
     visibility : hidden;
     }
+    .lis-bg-light {
+      background-color: #00000005
+  }
+  
+  section {
+      padding-top: 6.25em;
+      padding-bottom: 6.25em;
+      position: relative
+  }
+  
+  
+  .py-4 {
+      padding-bottom: 1.5rem !important
+  }
+  
+  
+  .lis-light {
+      color: #707070
+  }
+  
+  .font-weight-normal {
+      font-weight: 400 !important
+  }
+  
+  
+  .price-table {
+      -webkit-transition: 0.3s ease
+  }
+  
+  .lis-brd-light {
+      border-color: #dadada !important
+  }
+  
+  .lis-rounded-top {
+      border-top-right-radius: 20px;
+      border-top-left-radius: 20px
+  }
+  
+  .lis-bg-light {
+      background-color: #f7f7f7
+  }
+  
+  
+  .py-4 {
+      padding-bottom: 1.5rem !important
+  }
+  
+  .lis-latter-spacing-2 {
+      letter-spacing: 2px
+  }
+  
+  .text-uppercase {
+      text-transform: uppercase !important
+  }
+  
+  .lis-font-weight-500 {
+      font-weight: 500
+  }
+  
+  
+  .price-table sup {
+      top: -1.5em
+  }
+  
+  .price-table sup,
+  .price-table small {
+      font-size: 1.25rem
+  }
+  
+  .price-table small {
+      font-size: 1.25rem
+  }
+  
+  .mb-0 {
+      margin-bottom: 0 !important
+  }
+  
+  .lis-brd-light {
+      border-color: #dadada !important
+  }
+  
+  .bg-white {
+      background-color: #fff !important
+  }
+  
+  .py-5 {
+      padding-bottom: 3rem !important
+  }
+  
+  .lis-line-height-3 {
+      line-height: 3 !important
+  }
+  
+  .list-unstyled {
+      padding-left: 0;
+      list-style: none
+  }
+  
+  .lis-line-height-3 {
+      line-height: 3 !important
+  }
+  
+  
+  .lis-rounded-circle-50 {
+      border-radius: 50px
+  }
+  
+  .pl-2,
+  .px-2 {
+      padding-right: .5rem !important
+  }
+  
+  .lis-bg-primary {
+      background-color: #ff214f
+  }
+  
+  .price-table.active {
+      transform: scale(1.045);
+      -webkit-transform: scale(1.045)
+  }
+  
+  .price-table {
+      -webkit-transition: 0.3s ease
+  }
+  
+  .lis-rounded-bottom {
+      border-bottom-right-radius: 20px;
+      border-bottom-left-radius: 20px
+  }
